<resources>
    <string name="app_name">Stori Code Chalenge</string>

    <!-- Login -->
    <string name="sign_in_title">Inicia sesión</string>
    <string name="mail_hint">Correo electronico</string>
    <string name="password_hint">Contraseña</string>
    <string name="confirm_password_hint">Repite contraseña</string>
    <string name="enter_button">Entrar</string>
    <string name="error_empty_name">Ingrese un nombre</string>
    <string name="error_empty_last_name">Ingrese un apellido</string>
    <string name="error_empty_email">Ingrese un correo electrónico</string>
    <string name="error_invalid_email">Correo electrónico no válido</string>
    <string name="error_empty_password">Ingrese contraseña</string>
    <string name="no_account">Aun no tienes una cuenta?</string>
    <string name="error_passwords_dont_match">Contraseñas no coinciden</string>

    <!-- Sign Up -->
    <string name="sign_up_title">Crea tu cuenta</string>
    <string name="name_hint">Nombre</string>
    <string name="last_name_hint">Apellido</string>
    <string name="sign_up_button">Registrate</string>
    <string name="register_success">Registro exitoso</string>
    <string name="complete_login">Haz login con tus credenciales creadas</string>
    <string name="num_characters_password">Mínimo 6 caracteres</string>
    <string name="id_required_title">Se requiere identificacion</string>
    <string name="id_security">Debes tomar una fotografia a tu identificación por motivos de seguridad (no se almacena)</string>

    <!-- Permissions -->
    <string name="permission_required">Hace falta el permiso</string>
    <string name="permission_required_message">Es necesario brindar el acceso a la camara para poder continuar</string>

    <string name="authority" translatable="false">com.yoshio.challenge.fileprovider</string>
    <string name="cancel">Cancelar</string>

    <!--Home -->
    <string name="home_title">Binvenido %s %s</string>
    <string name="total_balance">Tu balance es: $%s</string>
    <string name="amount" translatable="false">$%s</string>

    <!-- Transaction detail -->
    <string name="transaction_detail">Detalle de transacción</string>
    <string name="type_transaction">Tipo de transacción: %s</string>
    <string name="date_transaction">Fecha: %s</string>
    <string name="receiver_transaction">Receptor: %s</string>
    <string name="sender_transaction">Emisor: %s</string>
    <string name="amount_transaction">Monto: $%s</string>
</resources>
