<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sign_up_toolbar"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text_view"
            style="@style/PrimaryTitlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/sign_up_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/Input.OutlinedBox"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_32"
            android:hint="@string/name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_input_layout"
            style="@style/Input.OutlinedBox"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_32"
            android:hint="@string/last_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/Input.OutlinedBox"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_32"
            android:hint="@string/mail_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Input.OutlinedBox"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginEnd="@dimen/space_32"
            android:hint="@string/password_hint"
            app:helperText="@string/num_characters_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textColorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            style="@style/Input.OutlinedBox"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_32"
            android:hint="@string/confirm_password_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
            app:passwordToggleDrawable="@drawable/password_toggle_drawable"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textColorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.yoshio.styling.widget.ProgressBarButton
            android:id="@+id/sign_up_button"
            android:layout_width="@dimen/space_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_32"
            android:layout_marginTop="@dimen/space_32"
            android:layout_marginEnd="@dimen/space_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout"
            app:text="@string/sign_up_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
