<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <ProgressBar
        android:id="@+id/home_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/home_toolbar" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_32"
        android:layout_marginTop="@dimen/space_16"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/home_title"
        android:textSize="@dimen/font_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar" />

    <TextView
        android:id="@+id/balance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_32"
        android:layout_marginTop="@dimen/space_16"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/total_balance"
        android:textColor="@color/colorOnSecondary"
        android:textSize="@dimen/big_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transaction_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_0"
        android:layout_margin="@dimen/space_20"
        android:paddingHorizontal="@dimen/space_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
